# real2sim2real

./: .gitignore  MUJOCO_LOG.TXT  diag_mj.py  test_view.py  test_xbot_arm_mjcf.py
DISCOVERSE/: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  README_zh.md  pyproject.toml
DISCOVERSE/aigc/rodin/: prompt.txt
DISCOVERSE/discoverse/envs/: simulator.py
DISCOVERSE/discoverse/examples/3dmouse/: 3dmouse.py
DISCOVERSE/discoverse/examples/active_slam/: camera_view.py  dummy_robot.py  mmk2.py  mmk2_open_car.py
DISCOVERSE/discoverse/examples/hil_bridge/: Dockerfile.ros  README.md  play.py  ros_entrypoint.sh  run.sh
DISCOVERSE/discoverse/examples/mocap_ik/: mocap_ik_airbot_play.py  mocap_ik_mmk2.py  mocap_ik_utils.py
DISCOVERSE/discoverse/examples/robots/: airbot_play_cer.py  airbot_replay.py  airbot_replay_control.py  control_util.py  cooperative_control.py  leap_hand_env.py  pid_control.py  quadrotor_logger.py  rm2_car.py  rm2_control.py  skyrover.py  skyrover_and_rm2car.py  skyrover_on_car_base.py
DISCOVERSE/discoverse/examples/ros1/: airbot_play_cam_ros1.py  airbot_play_ros1_joy.py  mmk2_joy_ros1_generate_policy.py  mmk2_ros1.py  mmk2_ros1_joy.py  mmk2_teach_bag_ros1.py  tok2_ros1.py
DISCOVERSE/discoverse/examples/ros2/: README.md  README_keypoints.md  airbot_play_ros2.py  airbot_play_ros2_joy.py  mmk2_joy_ros2_generate_policy.py  mmk2_ros2.py  mmk2_ros2_joy.py  tok2_ros2.py
DISCOVERSE/discoverse/examples/sensor_lidar/: mmk2_lidar_ros1.py  mmk2_lidar_ros2.py
DISCOVERSE/discoverse/examples/tasks_airbot_play/: block_bridge_place.py  close_laptop.py  cover_cup.py  open_drawer.py  pick_jujube.py  place_block.py  place_coffeecup.py  place_jujube.py  place_jujube_coffeecup.py  place_kiwi_fruit.py  push_mouse.py  stack_block.py
DISCOVERSE/discoverse/examples/tasks_hand_arm/: build_tower.py
DISCOVERSE/discoverse/examples/tasks_mmk2/: box_pick.py  cabinet_door_open.py  coffeecup_plate.py  drawer_open.py  gendata_from_json.py  jujube_pick.py  kiwi_pick.py  kiwi_place.py  pan_pick.py
DISCOVERSE/discoverse/examples/tasks_xbot_arm/: place_block.py
DISCOVERSE/discoverse/robots_env/: xbot_arm_base.py
DISCOVERSE/discoverse/task_base/: xbot_arm_task_base.py
DISCOVERSE/doc/: automated_data_generation.md  troubleshooting.md  usage.md
DISCOVERSE/doc/data_generation/: Randomain.md  Randomain_zh.md
DISCOVERSE/doc/imitation_learning/: data.md  inference.md  training.md
DISCOVERSE/doc/modeling/: gs_edit_zh.md  mesh2mjcf_zh.md  xml_editor.md
DISCOVERSE/doc/sensors/: stereo_camera.md  stereo_camera_zh.md
DISCOVERSE/docker/: Dockerfile  Dockerfile.vnc  start-vnc.sh
DISCOVERSE/models/meshes/mmk2/: head_yaw_link.STL  lft_wheel_link.STL  mmk2_lift_link_1.STL  rgt_wheel_link.STL
DISCOVERSE/models/mjcf/: airbot_play_floor.xml  airbot_play_short.xml  camera_env.xml  capture.xml  cooperative_aerial_ground_sim.xml  cooperative_multi_robot_sim.xml  dummy_robot.xml  exhibition.xml  exhibition_conference.xml  grasp_apple.xml  lab3_env.xml  leaphand_sensor_env.xml  mmk2_car.xml  mmk2_floor.xml  mmk2_floor_fixed.xml  mmk2_lidar.xml  rm2_car_floor.xml  scene.xml  skyrover_floor.xml  skyrover_on_rm2_car.xml  tok2_floor.xml
DISCOVERSE/models/mjcf/airbot_play/: airbot_play-simple_collision.xml  airbot_play.xml  airbot_play_cam.xml  airbot_play_control.xml  airbot_play_dependencies.xml  airbot_play_options.xml  airbot_play_sensor.xml
DISCOVERSE/models/mjcf/inspire_hand_arm/: hand_arm_bridge.xml  hand_with_arm.xml
DISCOVERSE/models/mjcf/leaphand_sensor_env/: auto_gen_xml.py  index_sensor_array.xml  leaphand_sensor.xml  mid_sensor_array.xml  ring_sensor_array.xml  sensor_include.xml  thumb_sensor_array.xml
DISCOVERSE/models/mjcf/mmk2/: arm_left.xml  arm_right.xml  head.xml  mmk2.xml  mmk2_control.xml  mmk2_dependencies.xml  mmk2_options.xml  mmk2_sensor.xml
DISCOVERSE/models/mjcf/object/: basket.xml  basket_dependencies.xml  bowl_dependencies.xml  bowl_pink.xml  bowl_yellow.xml  box.xml  box_dependencies.xml  bridge.xml  bridge_dependencies.xml  cabinet.xml  coffeecup_dependencies.xml  coffeecup_white.xml  coke.xml  coke_dependencies.xml  cup.xml  cup_dependencies.xml  cup_lid.xml  cup_lid_dependencies.xml  flower_bowl.xml  flower_bowl_dependencies.xml  jujube.xml  jujube_dependencies.xml  kiwi.xml  kiwi_dependencies.xml  left_shoe.xml  left_shoe_dependencies.xml  pan.xml  (+37 more)
DISCOVERSE/models/urdf/: airbot_play_v3_gripper.urdf  airbot_play_v3_gripper_fixed.urdf  mmk2_s_g2.urdf
DISCOVERSE/policies/: infer.py  train.py
DISCOVERSE/policies/Diffusion-Policy/: eval.py  eval.sh  pyproject.toml  train.py  train.sh
DISCOVERSE/policies/RDT/: .gitignore  README.md  env.py  eval.py  eval.sh  finetune.sh  main.py  model.py  requirements.txt
DISCOVERSE/policies/dp/: env.py  infer_real.py  raw2zarr.py  requirements.txt  setup.py  train_eval.py  utils.py
DISCOVERSE/policies/openpi/: .gitignore  .gitmodules  README.md  env.py  eval.py  eval.sh  finetune.sh  generate.sh  pi_model.py  process_data_pi.sh  pyproject.toml  where_is_package.py
DISCOVERSE/randomain/models/: extra_model_paths.yaml
DISCOVERSE/scripts/: check_installation.py  gsply_edit.py  mesh2mjcf.py  setup_submodules.py  tasks_data_gen.py
(+218 files in other folders)
